pkg/main/default/objects/EnvelopeConfigurationRecipient__c/EnvelopeConfigurationRecipient__c.object-meta.xml
<CustomObject>
    <label>Envelope Configuration Recipient</label>
    <nameField>
        <displayFormat>DEC-{0000000}</displayFormat>
        <label>Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envelope Configuration Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>