pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Recipient Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>