pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeConfiguration__c</fullName>
    <label>DocuSign Envelope Configuration</label>
    <referenceTo>EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>