pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/Filter__c.field-meta.xml
<CustomField>
	<fullName>Filter__c</fullName>
	<description>Recipient filter</description>
	<label>Recipient filter</label>
	<length>2000</length>
	<type>LongTextArea</type>
</CustomField>