pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/HostEmail__c.field-meta.xml
<CustomField>
    <fullName>HostEmail__c</fullName>
    <label>Host Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>