pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/IncrementRoutingOrder__c.field-meta.xml
<CustomField>
	<fullName>IncrementRoutingOrder__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Increment routing order</label>
	<type>Checkbox</type>
</CustomField>