pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>