pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/Required__c.field-meta.xml
<CustomField>
	<fullName>Required__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Required</label>
	<type>Checkbox</type>
</CustomField>