pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/Sequence__c.field-meta.xml
<CustomField>
	<fullName>Sequence__c</fullName>
	<label>Sequence</label>
	<precision>6</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>