pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/SigningGroupName__c.field-meta.xml
<CustomField>
    <fullName>SigningGroupName__c</fullName>
    <label>Signing Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>