pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/SignNow__c.field-meta.xml
<CustomField>
    <fullName>SignNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign now</label>
    <type>Checkbox</type>
</CustomField>