pkg/main/default/objects/EnvelopeConfigurationRecipient__c/fields/SourceId__c.field-meta.xml
<CustomField>
	<fullName>SourceId__c</fullName>
	<label>Source ID</label>
	<length>18</length>
	<type>Text</type>
</CustomField>